clusters/production/apps/exhibitron/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: exhibitron
  namespace: prod
  labels:
    app: exhibitron
spec:
  type: ClusterIP
  selector:
    app: exhibitron
  ports:
    - { name: http, port: 80, targetPort: 3001, protocol: TCP }
